added genre searching for movies
