# src/routes/proxy/searchMovie.ts
@@ -1,11 +1,16 @@
 import { Router } from 'express';
 import { requireEnvVar } from '../../middleware/validation';
-import { getSearchedMovieTitle } from '../../controllers/TMDB_Proxy/searchMovie';
+import {
+  getSearchedMovieGenre,
+  getSearchedMovieTitle,
+} from '../../controllers/TMDB_Proxy/searchMovie';
 
 const searchMovieRouter = Router();
 
 searchMovieRouter.use(requireEnvVar('TMDB_API_TOKEN'));
 
+searchMovieRouter.get('/movie/search', getSearchedMovieTitle);
 searchMovieRouter.get('/movie/search/title', getSearchedMovieTitle);
+searchMovieRouter.get('/movie/search/genre', getSearchedMovieGenre);
 
 export { searchMovieRouter };
